[package]
name = "blake3-lamport-signatures"
version = "0.3.2"
edition = "2021"
description = "Lamport Signatures using the Blake 3 Cryptographic Hash Function"
license = "MIT"
homepage = "https://github.com/samuelSchlesinger/blake3-lamport-signatures"
documentation = "https://docs.rs/blake3-lamport-signatures"
repository = "https://github.com/samuelSchlesinger/blake3-lamport-signatures"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
rand = "0.8.4"
proptest = "1.0.0"
